CORE-2365 - Fixed empty fixed footer visible

--- a/css/footer.less
+++ b/css/footer.less
@@ -16,6 +16,10 @@ permissions and limitations under the License.
         padding: 1em 1em 0 1em;
     }
 
+    .mw-footer:empty {
+        display: none;
+    }
+
     .mw-footer.container {
         padding-left: 0;
     }
